# sphinx-needs-viewer

./: README.rst  pyproject.toml  requirements.txt
.streamlit/: config.toml
sphinx_needs_viewer/: start.py  util.py  viewer.py  👋_Welcome.py
sphinx_needs_viewer/pages/: 2_📦_Single_Need_Viewer.py
